added folder sructure

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <H1>Xavier Masson's Portfolio</H1>
                 <H2>I am a Web Developer</H2>
                     <hr/>
-                       <h3><a href="./public/My movie list.html"> Movie Ranking Project</a></h3>
+                       <h3><a href="./public/assets/images/movie-ranking.png"> Movie Ranking Project</a></h3>
                             <img src="./public/assets/images/Screenshot of movie ranking website.png" height="200" alt="Xavier's Favourite Movies"/>
-                        <h3><a href="./public/Birthday Invitation.html">Birthday Invitation Project</a></h3>
+                        <h3><a href="./public/assets/images/birthday-invite.png">Birthday Invitation Project</a></h3>
                             <img src="./public/assets/images/Screenshot of Birthday invitation.png" height="200" alt="Xavier's Birthday Invitation"/>
                     <hr/>
                 <a href="./public/about.html">About Me</a>
